--- a/style/info.css
+++ b/style/info.css
@@ -158,11 +158,16 @@ p {
 }
 
 #features {
-  background: url("../image/back-features.jpg") center top no-repeat;
+  background: linear-gradient(94.54deg, #FF8212 0%, #ED4454 100%);
+}
+#features .text-button {
+  border-color: white;
+  color: white;
 }
 
 .section-features {
   padding-top: 210px;
+  padding-bottom: 80px;
 }
 .section-features h2 {
   text-transform: uppercase;
@@ -189,23 +194,27 @@ p {
   height: 62px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.05) url() center center no-repeat;
+  background-size: 100% 100%;
   cursor: pointer;
   margin-right: 20px;
 }
 .section-features .control li.left-control {
-  background-image: url("../image/arr-left.svg");
+  background-image: url("../image/arr-left-white.svg");
 }
 .section-features .control li.right-control {
-  background-image: url("../image/arr-right.svg");
+  background-image: url("../image/arr-right-white.svg");
 }
 .section-features .control li.left-control.enable {
-  background-image: url("../image/arr-left-hover.svg");
+  background-image: url("../image/arr-left-white-hover.svg");
 }
 .section-features .control li.right-control.enable {
-  background-image: url("../image/arr-right-hover.svg");
+  background-image: url("../image/arr-right-white-hover.svg");
+}
+.section-features .feature-area {
+  overflow: hidden;
 }
 .section-features .feature-content {
-  margin-top: 290px;
+  margin-top: 120px;
   display: flex;
   align-items: stretch;
   justify-content: flex-start;
@@ -217,18 +226,18 @@ p {
   border-radius: 10px;
   margin-right: 20px;
   padding: 140px 20px;
-  background: #000 url("") 20px 40px no-repeat;
+  background: #fff url("") 20px 40px no-repeat;
   flex: 0 0 auto;
 }
 .section-features .feature-content .feature-item dt {
-  color: white;
+  color: #000;
   font-weight: bold;
   font-size: 24px;
   line-height: 29px;
   margin-bottom: 30px;
 }
 .section-features .feature-content .feature-item dd {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(0, 0, 0, 0.5);
   font-size: 16px;
   line-height: 24px;
 }
@@ -734,6 +743,7 @@ p {
   height: 62px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.05) url() center center no-repeat;
+  background-size: 100% 100%;
   cursor: pointer;
   margin-left: 20px;
 }
@@ -1210,7 +1220,7 @@ p {
     padding-bottom: 0;
   }
 }
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 800px) {
   .column {
     flex-direction: column;
   }
@@ -1242,6 +1252,7 @@ p {
     text-align: center;
   }
   .section-main.column .left h2 {
+    text-align: left;
     font-weight: 900;
     font-size: 30px;
     line-height: 36px;
@@ -1266,15 +1277,23 @@ p {
     margin: 40px auto;
   }
 
+  #features {
+    background-size: 100% 720px;
+  }
+
   .section-features {
-    padding-bottom: 0;
+    padding-bottom: 60px;
   }
   .section-features h2 {
+    text-align: left;
     font-size: 28px;
     margin-bottom: 60px;
   }
   .section-features p {
     text-align: left;
+  }
+  .section-features .feature-content {
+    margin-top: 120px;
   }
   .section-features .control {
     justify-content: center;
@@ -1288,6 +1307,7 @@ p {
   }
   .section-product .content {
     padding-top: 340px;
+    padding-bottom: 0;
     background-position: center 80px;
   }
   .section-product h2 {
@@ -1302,6 +1322,7 @@ p {
 
   .token-top {
     visibility: hidden;
+    height: 80px;
   }
 
   .token-bottom {
@@ -1358,6 +1379,11 @@ p {
 
   .section-ecosystem .content {
     padding-top: 0;
+  }
+  .section-ecosystem h2 {
+    font-size: 28px;
+    line-height: 36px;
+    margin-bottom: 30px;
   }
   .section-ecosystem .ecosystem {
     width: 100%;
@@ -1465,11 +1491,21 @@ p {
 
   .section-roadmap h2 {
     text-align: left;
-    font-size: 32px;
+    font-size: 28px;
+    line-height: 36px;
   }
   .section-roadmap .control li {
-    width: 48px;
-    height: 48px;
+    width: 36px;
+    height: 36px;
+    margin-left: 12px;
+  }
+
+  .section-news {
+    padding-top: 60px;
+  }
+  .section-news h2 {
+    font-size: 28px;
+    line-height: 36px;
   }
 
   .section-partners p {
