--- a/sass/common.scss
+++ b/sass/common.scss
@@ -67,6 +67,7 @@ body {
   color: #524E4B !important;
   background-color: white !important;
 }
+
 .side-screen {
   position: fixed;
   z-index: 12;
@@ -104,14 +105,26 @@ body {
     li {
       margin-bottom: 36px;
     }
+    .drop-link {
+      width: 100px;
+      margin-left: auto;
+      margin-right: auto;
+      .drop-down {
+        padding-right: 10px;
+      }
+      .drop-down:before {
+        background-position: 0 4px;
+      }
+    }
   }
 }
 
 
 .nav, .section-nav {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+  margin-top: 10px;
   li {
     margin-left: 35px;
     font-size: 14px;
@@ -121,6 +134,54 @@ body {
   li:hover {
     border-bottom-color: #F5663D;
   }
+}
+
+.mobile-nav-link {
+  font-size: 14px;
+  font-weight: 400;
+  a:first-child {
+    font-size: 16px;
+    font-weight: 800;
+  }
+}
+
+.drop-link {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  position: relative;
+  .drop-down {
+    position: relative;
+    padding-right: 20px;
+  }
+  .drop-down:before {
+    content: ' ';
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    top: 5px;
+    right: 0;
+    background: url('../image/s-arr.svg') 0 0 no-repeat;
+    transform-origin: center 5px  ;
+  }
+  .drop-item {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-top: 1.5em;
+    padding-left: 1em;
+    display: none;
+  }
+}
+li.drop-link:hover, li.drop-link.touched{
+  border-bottom: none;
+  .drop-item {
+    display: block;
+  }
+}
+li.drop-link:hover .drop-down:before, li.drop-link.touched .drop-down:before {
+  transform: rotate(180deg);
+  transition: transform .2s;
 }
 
 .side-bar {
