--- a/sass/info.scss
+++ b/sass/info.scss
@@ -172,6 +172,9 @@ p {
     border-color: white;
     color: white;
   }
+  .text-button:hover {
+    background-color: rgba(255, 255, 255, 0.3)
+  }
 }
 .section-features {
   padding-top: 210px;
