--- a/style/info.css
+++ b/style/info.css
@@ -164,6 +164,9 @@ p {
   border-color: white;
   color: white;
 }
+#features .text-button:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
 
 .section-features {
   padding-top: 210px;
