Update Side Nav Style

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -112,6 +112,10 @@ body {
       .drop-down {
         padding-right: 10px;
       }
+      .drop-item {
+        width: 100px;
+        padding-top: 2em;
+      }
       .drop-down:before {
         background-position: 0 4px;
       }
