--- a/sass/common.scss
+++ b/sass/common.scss
@@ -100,24 +100,36 @@ body {
     font-size: 20px;
     line-height: 24px;
     margin-top: 104px;
-    text-align: center;
+    padding-left: 20px;
+    text-align: left;
     color: black;
     li {
-      margin-bottom: 36px;
+      font-size: 20px;
+      line-height: 20px;
+      padding-bottom: 30px;
+      margin-bottom: 30px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
     .drop-link {
-      width: 100px;
-      margin-left: auto;
-      margin-right: auto;
       .drop-down {
         padding-right: 10px;
+        padding-bottom: 30px;
       }
       .drop-item {
-        width: 100px;
-        padding-top: 2em;
+        position: static;
+        display: block;
+        padding-left: 30px;
+        padding: 0;
+        a {
+          border-top: 1px solid rgba(0, 0, 0, 0.05);
+          font-size: 16px;
+          line-height: 20px;
+          padding: 20px 0 0 30px;
+          box-shadow: none;
+        }
       }
       .drop-down:before {
-        background-position: 0 4px;
+        right: 30px;
       }
     }
   }
@@ -142,7 +154,8 @@ body {
 
 .mobile-nav-link {
   font-size: 14px;
-  font-weight: 400;
+  line-height: 17px;
+  font-weight: bold;
   a:first-child {
     font-size: 16px;
     font-weight: 800;
@@ -163,19 +176,35 @@ body {
     position: absolute;
     width: 12px;
     height: 12px;
-    top: 5px;
+    top: 6px;
     right: 0;
     background: url('../image/s-arr.svg') 0 0 no-repeat;
-    transform-origin: center 5px  ;
+    transform-origin: center 3px;
   }
   .drop-item {
     position: absolute;
     top: 0;
     left: 0;
-    padding-top: 1.5em;
-    padding-left: 1em;
+    min-width: 100px;
+    padding-top: 28px;
+    padding-left: 0;
     display: none;
+    a {
+      color: #000;
+      display: block;
+      padding: 20px;
+      background: #FFFFFF;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
+      border-radius: 4px;
+    }
+    a:hover {
+      color: #FB822A;
+      text-decoration: underline;
+    }
   }
+}
+.back-black .drop-down:before {
+  background-image: url('../image/s-arr-white.svg');
 }
 li.drop-link:hover, li.drop-link.touched{
   border-bottom: none;
@@ -290,11 +319,13 @@ li.drop-link:hover .drop-down:before, li.drop-link.touched .drop-down:before {
   align-items: center;
   justify-content: space-around;
   position: absolute;
-  width: 100%;
+  width: 200px;
   bottom: 100px;
+  left: 50%;
+  margin-left: -100px;
   img {
-    width: 35px;
-    height: 35px;
+    width: 32px;
+    height: 32px;
   }
 }
 @media only screen and (max-width: 1280px) {
