--- a/sass/common.scss
+++ b/sass/common.scss
@@ -111,13 +111,13 @@ body {
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
     .drop-link {
+      padding-bottom: 0;
       .drop-down {
         padding-right: 10px;
         padding-bottom: 30px;
       }
       .drop-item {
         position: static;
-        display: block;
         padding-left: 30px;
         padding: 0;
         a {
@@ -320,9 +320,7 @@ li.drop-link:hover .drop-down:before, li.drop-link.touched .drop-down:before {
   justify-content: space-around;
   position: absolute;
   width: 200px;
-  bottom: 100px;
-  left: 50%;
-  margin-left: -100px;
+  bottom: 50px;
   img {
     width: 32px;
     height: 32px;
