--- a/sass/common.scss
+++ b/sass/common.scss
@@ -103,29 +103,35 @@ body {
     padding-left: 20px;
     text-align: left;
     color: black;
+    margin-bottom: 50px;
     li {
-      font-size: 20px;
+      font-size: 16px;
       line-height: 20px;
-      padding-bottom: 30px;
-      margin-bottom: 30px;
+      padding-bottom: 20px;
+      margin-bottom: 20px;
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
     .drop-link {
       padding-bottom: 0;
       .drop-down {
         padding-right: 10px;
-        padding-bottom: 30px;
+        padding-bottom: 20px;
       }
       .drop-item {
         position: static;
         padding-left: 30px;
         padding: 0;
-        a {
+        span {
+          box-shadow: none;
+          padding-left: 0;
+          padding-top: 5px;
+          padding-bottom: 5px;
           border-top: 1px solid rgba(0, 0, 0, 0.05);
+        }
+        a {
           font-size: 16px;
           line-height: 20px;
-          padding: 20px 0 30px 30px;
-          box-shadow: none;
+          padding: 15px 0 15px 30px;
         }
       }
       .drop-down:before {
@@ -185,14 +191,14 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 100px;
+    min-width: 120px;
     padding-top: 28px;
     padding-left: 0;
     display: none;
-    a {
+    span {
       color: #000;
       display: block;
-      padding: 20px;
+      padding: 20px 0 0 20px;
       background: #FFFFFF;
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
       border-radius: 4px;
@@ -200,6 +206,10 @@ body {
     a:hover {
       color: #FB822A;
       text-decoration: underline;
+    }
+    a {
+      display: block;
+      padding-bottom: 20px;
     }
   }
 }
@@ -317,10 +327,11 @@ li.drop-link:hover .drop-down:before, li.drop-link.touched .drop-down:before {
 .side-social {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  position: absolute;
-  width: 200px;
-  bottom: 50px;
+  justify-content: flex-start;
+  margin-left: 20px;
+  a {
+    margin-right: 50px;
+  }
   img {
     width: 32px;
     height: 32px;
