--- a/sass/info.scss
+++ b/sass/info.scss
@@ -1113,8 +1113,8 @@ p {
   height: 720px;
   padding-top: 320px;
   padding-bottom: 80px;
-  background: url('../image/about-main.png') 0 0 no-repeat;
-  background-size: 100% 100%;
+  background: url('../image/about-main.png') 100% center no-repeat;
+  background-size: 50% 50%;
   h2 {
     max-width: 640px;
     margin-bottom: 40px;
@@ -1139,7 +1139,7 @@ p {
   }
   dt {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 22px;
     line-height: 24px;
     margin-bottom: 20px;
     color: black;
