--- a/sass/info.scss
+++ b/sass/info.scss
@@ -1116,6 +1116,7 @@ p {
   background: url('../image/about-main.png') 100% center no-repeat;
   background-size: 50% 50%;
   h2 {
+    font-family: Inter;
     max-width: 640px;
     margin-bottom: 40px;
   }
@@ -1279,14 +1280,14 @@ p {
       h2 {
         text-align: left;
         font-weight: 900;
-        font-size: 28px;
-        line-height: 28px;
+        font-size: 27px;
+        line-height: 27px;
         margin-bottom: 10px;
       }
       h3 {
         font-weight: 900;
-        font-size: 24px;
-        line-height: 24px;
+        font-size: 23px;
+        line-height: 23px;
       }
       p {
         text-align: left;
