--- a/sass/info.scss
+++ b/sass/info.scss
@@ -126,6 +126,9 @@ p {
       background: url('../image/icon.svg') 100% 0 no-repeat;
     }
     h2 {
+      background-image: linear-gradient(94.54deg, #FF8212 0%, #ED4454 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       text-transform: uppercase;
       font-weight: 900;
       font-size: 64px;
@@ -133,14 +136,15 @@ p {
       margin-bottom: 20px;
     }
     h3 {
-      text-transform: uppercase;
-      font-weight: 900;
-      font-size: 40px;
-      line-height: 48px;
+      display: flex;
+      font-family: InterRegular;
+      font-weight: normal;
+      font-size: 32px;
+      line-height: 32px;
       margin-bottom: 30px;
-      background-image: linear-gradient(94.54deg, #FF8212 0%, #ED4454 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      img {
+        margin-left: 0.5em;
+      }
     }
     p {
       max-width: 640px;
@@ -1288,7 +1292,7 @@ p {
         margin-bottom: 10px;
       }
       h3 {
-        font-weight: 900;
+        font-weight: normal;
         font-size: 23px;
         line-height: 23px;
       }
