--- a/sass/info.scss
+++ b/sass/info.scss
@@ -213,19 +213,26 @@ p {
       border-radius: 50%;
       background: rgba(255, 255, 255, 0.05) url() center center no-repeat;
       background-size: 100% 100%;
-      cursor: pointer;
       margin-right: 20px;
     }
     li.left-control {
-      background-image: url('../image/arr-left-white.svg');
+      background-image: url('../image/arr-left-white-disable.svg');
     }
     li.right-control {
-      background-image: url('../image/arr-right-white.svg');
+      background-image: url('../image/arr-right-white-disable.svg');
     }
     li.left-control.enable {
-      background-image: url('../image/arr-left-white-hover.svg');
+      cursor: pointer;
+      background-image: url('../image/arr-left-white.svg');
     }
     li.right-control.enable {
+      cursor: pointer;
+      background-image: url('../image/arr-right-white.svg');
+    }
+    li.left-control.enable:hover {
+      background-image: url('../image/arr-left-white-hover.svg');
+    }
+    li.right-control.enable:hover {
       background-image: url('../image/arr-right-white-hover.svg');
     }
   }
@@ -240,7 +247,7 @@ p {
     align-items: stretch;
     justify-content: flex-start;
     overflow: hidden;
-
+    padding-bottom: 10px;
     .feature-item {
       width: 275px;
       height: 320px;
@@ -249,7 +256,7 @@ p {
       padding: 140px 20px;
       background: #fff url('') 20px 40px no-repeat;
       flex: 0 0 auto;
-
+      cursor: pointer;
       dt {
         color: #000;
         font-weight: bold;
@@ -262,6 +269,10 @@ p {
         font-size: 16px;
         line-height: 24px;
       }
+    }
+    .feature-item:hover {
+      margin-top: 10px;
+      margin-bottom: -10px;
     }
     .feature-item:nth-child(1n) {
       background-image: url('../image/list-1.svg');
@@ -769,20 +780,27 @@ p {
       border-radius: 50%;
       background: rgba(255, 255, 255, 0.05) url() center center no-repeat;
       background-size: 100% 100%;
-      cursor: pointer;
       margin-left: 20px;
     }
     li.left-control {
-      background-image: url('../image/arr-left.svg');
+      background-image: url('../image/arr-left-disable.svg');
     }
     li.right-control {
-      background-image: url('../image/arr-right.svg');
+      background-image: url('../image/arr-right-disable.svg');
     }
     li.left-control.enable {
-      background-image: url('../image/arr-left-hover.svg');
+      cursor: pointer;
+      background-image: url('../image/arr-left.svg');
     }
     li.right-control.enable {
-      background-image: url('../image/arr-right-hover.svg');
+      cursor: pointer;
+      background-image: url('../image/arr-right.svg');
+    }
+    li.left-control.enable:hover {
+      background-image: url('../image/arr-left-hover.svg');
+    }
+    li.right-control.enable:hover {
+      background-image: url('../image/arr-right-hover.svg')
     }
   }
   .road-item {
